deploy res page

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -163,3 +163,12 @@ a.secondary {
     filter: invert();
   }
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
